--- a/articles/aks/TOC.yml
+++ b/articles/aks/TOC.yml
@@ -165,20 +165,16 @@ items:
     - name: Begränsa åtkomsten till klusterkonfigurationsfiler
       href: control-kubeconfig-access.md
     - name: Autentisera med ACR
-      href: ../container-registry/container-registry-auth-aks.md
-      maintainContext: true
+      href: ../container-registry/container-registry-auth-aks.md?toc=%2fazure%2faks%2ftoc.json
   - name: Övervakning och loggning
     items:
     - name: Azure Monitor för containrar
-      href: ../azure-monitor/insights/container-insights-overview.md
+      href: ../monitoring/monitoring-container-health.md
       maintainContext: true
     - name: Visa loggar för huvudkomponenten
       href: view-master-logs.md
     - name: Visa kubelet-loggarna
       href: kubelet-logs.md
-    - name: Visa containerloggar i realtid (förhandsversion)
-      href: ../azure-monitor/insights/container-insights-live-logs.md
-      maintainContext: true
   - name: Utveckla och köra program
     items:
     - name: Utveckla med Dev Spaces
@@ -296,9 +292,9 @@ items:
     href: https://azure.microsoft.com/resources/videos/index/?services=container-service&sort=newest
   - name: VANLIGA FRÅGOR OCH SVAR
     href: faq.md
-ms.openlocfilehash: f59d5f982885c21449949ab79b51db32585ea80f
-ms.sourcegitcommit: 33091f0ecf6d79d434fa90e76d11af48fd7ed16d
+ms.openlocfilehash: d0d419ff2b832c48cb7d1a35fa398da34f5bf382
+ms.sourcegitcommit: 8330a262abaddaafd4acb04016b68486fba5835b
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 01/09/2019
-ms.locfileid: "54159867"
+ms.lasthandoff: 01/04/2019
+ms.locfileid: "54037970"
