--- a/articles/azure-signalr/TOC.yml
+++ b/articles/azure-signalr/TOC.yml
@@ -1,58 +1,65 @@
+items:
 - name: Dokumentation för Azure SignalR Service
   href: index.yml
 - name: Översikt
   items:
-    - name: Om Azure SignalR-tjänsten
-      href: signalr-overview.md
+  - name: Om Azure SignalR-tjänsten
+    href: signalr-overview.md
 - name: Snabbstarter
   items:
-    - name: ASP.NET Core
-      href: signalr-quickstart-dotnet-core.md
-    - name: Azure Functions – JavaScript
-      href: signalr-quickstart-azure-functions-javascript.md
-    - name: 'Azure Functions – C#'
-      href: signalr-quickstart-azure-functions-csharp.md
-    - name: REST-API
-      href: signalr-quickstart-rest-api.md
+  - name: ASP.NET Core
+    href: signalr-quickstart-dotnet-core.md
+  - name: Azure Functions – JavaScript
+    href: signalr-quickstart-azure-functions-javascript.md
+  - name: Azure Functions – C#
+    href: signalr-quickstart-azure-functions-csharp.md
+  - name: REST-API
+    href: signalr-quickstart-rest-api.md
 - name: Självstudier
   items:
-    - name: Integrera med ASP.NET Core-identitet
-      href: signalr-authenticate-oauth.md
-    - name: Skapa en serverlös realtidsapp med autentisering
-      href: signalr-authenticate-azure-functions.md
+  - name: Integrera med ASP.NET Core-identitet
+    href: signalr-authenticate-oauth.md
+  - name: Skapa en serverlös realtidsapp med autentisering
+    href: signalr-authenticate-azure-functions.md
 - name: Exempel
   items:
-    - name: Kodexempel
-      href: 'https://github.com/aspnet/AzureSignalR-samples'
-    - name: Azure CLI
-      href: signalr-cli-samples.md
+  - name: Kodexempel
+    href: https://github.com/aspnet/AzureSignalR-samples
+  - name: Azure CLI
+    href: signalr-cli-samples.md
 - name: Begrepp
   items:
-    - name: Azure SignalR Service – internt
-      href: signalr-internals.md
-    - name: Skala ASP.NET Core SignalR
-      href: signalr-overview-scale-aspnet-core.md
-    - name: Skapa realtidsappar med Azure Functions
-      href: signalr-overview-azure-functions.md
-    - name: Rotering av åtkomstnyckel
-      href: signalr-key-rotation.md
-    - name: Meddelanden och anslutningar
-      href: signalr-messages.md
+  - name: Azure SignalR Service – internt
+    href: signalr-internals.md
+  - name: Skala ASP.NET Core SignalR
+    href: signalr-overview-scale-aspnet-core.md
+  - name: Skapa realtidsappar med Azure Functions
+    href: signalr-overview-azure-functions.md
+  - name: Rotering av åtkomstnyckel
+    href: signalr-key-rotation.md
+  - name: Meddelanden och anslutningar
+    href: signalr-messages.md
 - name: Resurser
   items:
-    - name: Översikt över SignalR
-      href: 'https://github.com/aspnet/Home/wiki/Roadmap'
-    - name: Vanliga frågor och svar
-      href: signalr-faq.md
-    - name: Nivågränser för SignalR Service-prenumerationer
-      href: 'https://docs.microsoft.com/en-us/azure/azure-subscription-service-limits#signalr-service-limits'
-    - name: Prissättning
-      href: 'https://azure.microsoft.com/pricing/details/signalr-service/'
-    - name: Videoklipp
-      href: 'https://www.youtube.com/results?search_query=Azure+SignalR+Core'
-    - name: StackOverflow
-      href: 'https://stackoverflow.com/search?q=signalr+service'
-    - name: ASP.NET-forum
-      href: 'https://forums.asp.net/1254.aspx'
-    - name: Twitter
-      href: 'https://twitter.com/SignalR'
+  - name: Översikt över SignalR
+    href: https://github.com/aspnet/Home/wiki/Roadmap
+  - name: Vanliga frågor och svar
+    href: signalr-faq.md
+  - name: Nivågränser för SignalR Service-prenumerationer
+    href: https://docs.microsoft.com/en-us/azure/azure-subscription-service-limits#signalr-service-limits
+  - name: Prissättning
+    href: https://azure.microsoft.com/pricing/details/signalr-service/
+  - name: Videoklipp
+    href: https://www.youtube.com/results?search_query=Azure+SignalR+Core
+  - name: StackOverflow
+    href: https://stackoverflow.com/search?q=signalr+service
+  - name: ASP.NET-forum
+    href: https://forums.asp.net/1254.aspx
+  - name: Twitter
+    href: https://twitter.com/SignalR
+ms.openlocfilehash: c3ea5775f4ee357556a4619141a70ad06b3757d9
+ms.sourcegitcommit: 9b6492fdcac18aa872ed771192a420d1d9551a33
+ms.translationtype: HT
+ms.contentlocale: sv-SE
+ms.lasthandoff: 01/22/2019
+ms.locfileid: "54451399"
