--- a/articles/digital-twins/TOC.yml
+++ b/articles/digital-twins/TOC.yml
@@ -47,28 +47,22 @@ items:
       href: security-authenticating-apis.md
 - name: Instruktionsguider
   items:
-  - name: Aktivera program med flera klienter
+  - name: Så här aktiverar du program med flera klienter
     href: how-to-multitenant-applications.md
-  - name: Skapa användardefinierade funktioner
+  - name: Så här skapar du användardefinierade funktioner
     href: how-to-user-defined-functions.md
-  - name: Dirigera händelser och meddelanden via slutpunkter
+  - name: Så här dirigerar du händelser och meddelanden via slutpunkter
     href: how-to-egress-endpoints.md
+  - name: Konfigurera Postman
+    href: how-to-configure-postman.md
   - name: Lägga till blobar i objekt
     href: how-to-add-blobs.md
-  - name: Använda Digital Twins Swagger
+  - name: Så här använder du Digital Twins Swagger
     href: how-to-use-swagger.md
-  - name: Felsöka användardefinierade funktioner
+  - name: Så här felsöker du användardefinierade funktioner
     href: how-to-diagnose-user-defined-functions.md
-  - name: Konfigurera övervakning
+  - name: Så här konfigurerar du övervakning
     href: how-to-configure-monitoring.md
-  - name: Fråga Digital Twins-API:er
-    items:
-    - name: Konfigurera Postman
-      href: how-to-configure-postman.md
-    - name: Använda Digital Twins-API:er
-      href: how-to-navigate-apis.md
-    - name: Vanliga frågemönster
-      href: how-to-query-common-apis.md
 - name: Referens
   items:
   - name: Användardefinierade funktioner – klientbibliotek
@@ -119,9 +113,9 @@ items:
     href: https://azure.microsoft.com/roadmap/?category=iot
   - name: Videoklipp
     href: https://channel9.msdn.com/Search?term=%22Azure%20Digital%20Twins%22&lang-en=true
-ms.openlocfilehash: 92d60cbe1de8d8f2b36d67e1a7ff2999a45e1a8e
-ms.sourcegitcommit: 30d23a9d270e10bb87b6bfc13e789b9de300dc6b
+ms.openlocfilehash: 04716146653b833461b8230c2895fd1a8b6dcd42
+ms.sourcegitcommit: fd488a828465e7acec50e7a134e1c2cab117bee8
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 01/08/2019
-ms.locfileid: "54102231"
+ms.lasthandoff: 01/03/2019
+ms.locfileid: "53993475"
