--- a/articles/iot-hub/TOC.yml
+++ b/articles/iot-hub/TOC.yml
@@ -9,50 +9,30 @@ items:
     href: about-iot-hub.md
 - name: Snabbstarter
   items:
-  - name: Skicka telemetri
-    items:
-    - name: C
-      href: quickstart-send-telemetry-c.md
-    - name: Node.js
-      href: quickstart-send-telemetry-node.md
-    - name: .NET
-      href: quickstart-send-telemetry-dotnet.md
-    - name: Java
-      href: quickstart-send-telemetry-java.md
-    - name: Python
-      href: quickstart-send-telemetry-python.md
-    - name: Android
-      href: quickstart-send-telemetry-android.md
-    - name: iOS
-      href: quickstart-send-telemetry-ios.md
-  - name: Kontrollera en enhet
-    items:
-    - name: Node.js
-      href: quickstart-control-device-node.md
-    - name: .NET
-      href: quickstart-control-device-dotnet.md
-    - name: Java
-      href: quickstart-control-device-java.md
-    - name: Python
-      href: quickstart-control-device-python.md
-    - name: Android
-      href: quickstart-control-device-android.md
-  - name: Kommunicera med hjälp av enhetsströmmar (förhandsversion)
-    items:
-    - name: C#
-      href: quickstart-device-streams-echo-csharp.md
-    - name: Node.js
-      href: quickstart-device-streams-echo-nodejs.md
-    - name: C
-      href: quickstart-device-streams-echo-c.md
-  - name: SSH/RDP med hjälp av enhetsströmmar (förhandsversion)
-    items:
-    - name: C#
-      href: quickstart-device-streams-proxy-csharp.md
-    - name: Node.js
-      href: quickstart-device-streams-proxy-nodejs.md
-    - name: C
-      href: quickstart-device-streams-proxy-c.md
+  - name: Skicka telemetri (C)
+    href: quickstart-send-telemetry-c.md
+  - name: Skicka telemetri (Node.js)
+    href: quickstart-send-telemetry-node.md
+  - name: Skicka telemetri (.NET)
+    href: quickstart-send-telemetry-dotnet.md
+  - name: Skicka telemetri (Java)
+    href: quickstart-send-telemetry-java.md
+  - name: Skicka telemetri (Python)
+    href: quickstart-send-telemetry-python.md
+  - name: Skicka telemetri (Android)
+    href: quickstart-send-telemetry-android.md
+  - name: Skicka telemetri (iOS)
+    href: quickstart-send-telemetry-ios.md
+  - name: Kontrollera en enhet (Node.js)
+    href: quickstart-control-device-node.md
+  - name: Kontrollera en enhet (.NET)
+    href: quickstart-control-device-dotnet.md
+  - name: Kontrollera en enhet (Java)
+    href: quickstart-control-device-java.md
+  - name: Kontrollera en enhet (Python)
+    href: quickstart-control-device-python.md
+  - name: Kontrollera en enhet (Android)
+    href: quickstart-control-device-android.md
 - name: Självstudier
   items:
   - name: Meddelanderoutning
@@ -85,8 +65,6 @@ items:
     href: iot-hub-configuration-best-practices.md
   - name: Support för Azure IoT SDK-plattform
     href: iot-hub-device-sdk-platform-support.md
-  - name: Översikt över enhetsströmmar i IoT Hub (förhandsversion)
-    href: iot-hub-device-streams-overview.md
   - name: Utvecklarguide
     href: iot-hub-devguide.md
     items:
@@ -442,9 +420,9 @@ items:
     href: https://microsoft.github.io/techcasestudies/#technology=IoT&sortBy=featured
   - name: Videoklipp
     href: https://azure.microsoft.com/documentation/videos/index/?services=iot-hub
-ms.openlocfilehash: 84eae62600f5cb62bfd8941d90140c6150a983f0
-ms.sourcegitcommit: 98645e63f657ffa2cc42f52fea911b1cdcd56453
+ms.openlocfilehash: 7ac517a2d2963993d40899183c020570b2934f80
+ms.sourcegitcommit: f4b78e2c9962d3139a910a4d222d02cda1474440
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 01/23/2019
-ms.locfileid: "54809130"
+ms.lasthandoff: 01/12/2019
+ms.locfileid: "54247341"
