--- a/articles/media-services/latest/TOC.yml
+++ b/articles/media-services/latest/TOC.yml
@@ -1,204 +1,212 @@
+items:
 - name: Dokumentation för Media Services
   href: ./index.yml
 - name: Översikt
   items:
-    - name: Om Media Services
-      href: media-services-overview.md
+  - name: Om Media Services
+    href: media-services-overview.md
 - name: Snabbstarter
-  expanded: true
   items:
-    - name: Strömma videofiler med .NET
-      href: stream-files-dotnet-quickstart.md
+  - name: Strömma videofiler med .NET
+    href: stream-files-dotnet-quickstart.md
+  expanded: true
 - name: Självstudier
-  expanded: true
   items:
-    - name: Koda fjärrfiler och strömma video – REST
-      href: stream-files-tutorial-with-rest.md
-    - name: Koda uppladdade filer och strömma video – NET
-      href: stream-files-tutorial-with-api.md
-    - name: Strömma live – .NET
-      href: stream-live-tutorial-with-api.md
-    - name: Analysera din video – .NET
-      href: analyze-videos-tutorial-with-api.md
+  - name: Koda fjärrfiler och strömma video – REST
+    href: stream-files-tutorial-with-rest.md
+  - name: Koda uppladdade filer och strömma video – NET
+    href: stream-files-tutorial-with-api.md
+  - name: Strömma live – .NET
+    href: stream-live-tutorial-with-api.md
+  - name: Analysera din video – .NET
+    href: analyze-videos-tutorial-with-api.md
+  expanded: true
 - name: Exempel
   items:
-    - name: Azure-kodexempel
-      href: 'https://azure.microsoft.com/resources/samples/?sort=0&service=media-services&term=v3'
-    - name: Azure CLI
-      href: cli-samples.md
+  - name: Azure-kodexempel
+    href: https://azure.microsoft.com/resources/samples/?sort=0&service=media-services&term=v3
+  - name: Azure CLI
+    href: cli-samples.md
 - name: Begrepp
   items:
+  - name: Konton
+    items:
     - name: Migrera från v2 till v3
       href: migrate-from-v2-to-v3.md
-    - name: Konton
-      items:
-        - name: Kvoter och begränsningar
-          href: limits-quotas-constraints.md
-        - name: Lagringskonton
-          href: storage-account-concept.md
-    - name: Entiteter
-      href: entities-overview.md
-      items:
-        - name: Konto- och tillgångsfilter
-          href: filters-dynamic-manifest-overview.md
-        - name: Tillgångar
-          href: assets-concept.md
-        - name: Principer för innehållsnycklar
-          href: content-key-policy-concept.md
-        - name: LiveEvents och LiveOutputs
-          href: live-events-outputs-concept.md
-        - name: Slutpunkter för direktuppspelning
-          href: streaming-endpoint-concept.md
-        - name: Positionerare för direktuppspelning
-          href: streaming-locators-concept.md
-        - name: Principer för direktuppspelning
-          href: streaming-policy-concept.md
-        - name: Transformeringar och jobb
-          href: transforms-jobs-concept.md
-    - name: Koda innehåll
-      href: encoding-concept.md
-      items:
-        - name: Media Encoder Standard-format
-          href: media-encoder-standard-formats.md
-        - name: Generera anpassningsbar bithastighetsstege automatiskt
-          href: autogen-bitrate-ladder.md
-    - name: Hantera Event Grid-händelser
-      href: reacting-to-media-services-events.md
-    - name: Skydda innehåll
+    - name: Kvoter och begränsningar
+      href: limits-quotas-constraints.md
+    - name: Lagringskonton
+      href: storage-account-concept.md
+  - name: Entiteter
+    href: entities-overview.md
+    items:
+    - name: Konto- och tillgångsfilter
+      href: filters-dynamic-manifest-overview.md
+    - name: Tillgångar
+      href: assets-concept.md
+    - name: Principer för innehållsnycklar
+      href: content-key-policy-concept.md
+    - name: LiveEvents och LiveOutputs
+      href: live-events-outputs-concept.md
+    - name: Slutpunkter för direktuppspelning
+      href: streaming-endpoint-concept.md
+    - name: Positionerare för direktuppspelning
+      href: streaming-locators-concept.md
+    - name: Principer för direktuppspelning
+      href: streaming-policy-concept.md
+    - name: Transformeringar och jobb
+      href: transforms-jobs-concept.md
+  - name: Koda innehåll
+    href: encoding-concept.md
+    items:
+    - name: Media Encoder Standard-format
+      href: media-encoder-standard-formats.md
+    - name: Generera anpassningsbar bithastighetsstege automatiskt
+      href: autogen-bitrate-ladder.md
+  - name: Hantera Event Grid-händelser
+    href: reacting-to-media-services-events.md
+  - name: Skydda innehåll
+    items:
+    - name: Översikt
       href: content-protection-overview.md
-      items:
-        - name: Multi-DRM-system med åtkomstkontroll
-          href: design-multi-drm-system-with-access-control.md
-    - name: Analysera innehåll
-      href: analyzing-video-audio-files-concept.md
-    - name: Direktuppspelning av händelser
-      href: live-streaming-overview.md
-      items:
-        - name: Rekommenderade livekodare
-          href: recommended-on-premises-live-encoders.md
-        - name: Använda en moln-DVR
-          href: live-event-cloud-dvr.md
-        - name: Jämför funktioner
-          href: live-event-types-comparison.md
-        - name: Tillstånd och fakturering
-          href: live-event-states-billing.md
-        - name: Svarstid
-          href: live-event-latency.md
-    - name: Azure Media Player
-      href: use-azure-media-player.md
+    - name: Multi-DRM-system med åtkomstkontroll
+      href: design-multi-drm-system-with-access-control.md
+  - name: Analysera innehåll
+    href: analyzing-video-audio-files-concept.md
+  - name: Direktuppspelning av händelser
+    href: live-streaming-overview.md
+    items:
+    - name: Rekommenderade livekodare
+      href: recommended-on-premises-live-encoders.md
+    - name: Använda en moln-DVR
+      href: live-event-cloud-dvr.md
+    - name: Jämför funktioner
+      href: live-event-types-comparison.md
+    - name: Tillstånd och fakturering
+      href: live-event-states-billing.md
+    - name: Svarstid
+      href: live-event-latency.md
+  - name: Azure Media Player
+    href: use-azure-media-player.md
 - name: Instruktionsguider
   items:
-    - name: Kom igång
-      items:
-        - name: Skapa ett konto – CLI
-          href: create-account-cli-how-to.md
-        - name: 'Åtkomst till API:er – CLI'
-          href: access-api-cli-how-to.md
-        - name: Skala mediereserverade enheter – CLI
-          href: media-reserved-units-cli-how-to.md
-    - name: Konfigurera Postman
-      href: media-rest-apis-with-postman.md
-    - name: Överföra innehåll
-      items:
-        - name: 'Från HTTP(:er) – .NET'
-          href: job-input-from-http-how-to.md
-        - name: Från en lokal fil – .NET
-          href: job-input-from-local-file-how-to.md
-        - name: Från en lokal fil – REST
-          href: upload-files-rest-how-to.md
-    - name: Koda innehåll
-      items:
-        - name: Anpassa förinställningar för transformering – .NET
-          href: customize-encoder-presets-how-to.md
-    - name: Använda Event Grid
-      items:
-        - name: Övervaka händelser – portalen
-          href: monitor-events-portal-how-to.md
-        - name: Övervaka händelser – CLI
-          href: job-state-events-cli-how-to.md
-    - name: Skydda innehåll
-      items:
-        - name: 'AES-128, dynamisk kryptering – .NET'
-          href: protect-with-aes128.md
-        - name: 'DRM, dynamisk kryptering – .NET'
-          href: protect-with-drm.md
-        - name: Hämta princip för innehållsnyckel – .NET
-          href: get-content-key-policy-dotnet-howto.md
-        - name: Offline FairPlay för iOS
-          href: offline-fairplay-for-ios.md
-        - name: Offline Widevine för Android
-          href: offline-widevine-for-android.md
-        - name: Offline PlayReady för Windows 10
-          href: offline-plaready-streaming-for-windows-10.md
-    - name: Skapa filter
-      items:
-        - name: Med .NET
-          href: filters-dynamic-manifest-dotnet-howto.md
-        - name: Med REST
-          href: filters-dynamic-manifest-rest-howto.md
-        - name: Med CLI
-          href: filters-dynamic-manifest-cli-howto.md
+  - name: Kom igång
+    items:
+    - name: Skapa ett konto – CLI
+      href: create-account-cli-how-to.md
+    - name: Åtkomst till API:er – CLI
+      href: access-api-cli-how-to.md
+    - name: Skala mediereserverade enheter – CLI
+      href: media-reserved-units-cli-how-to.md
+  - name: Konfigurera Postman
+    href: media-rest-apis-with-postman.md
+  - name: Överföra innehåll
+    items:
+    - name: Från HTTP(:er) – .NET
+      href: job-input-from-http-how-to.md
+    - name: Från en lokal fil – .NET
+      href: job-input-from-local-file-how-to.md
+    - name: Från en lokal fil – REST
+      href: upload-files-rest-how-to.md
+  - name: Koda innehåll
+    items:
+    - name: Anpassa förinställningar för transformering – .NET
+      href: customize-encoder-presets-how-to.md
+  - name: Använda Event Grid
+    items:
+    - name: Övervaka händelser – portalen
+      href: monitor-events-portal-how-to.md
+    - name: Övervaka händelser – CLI
+      href: job-state-events-cli-how-to.md
+  - name: Skydda innehåll
+    items:
+    - name: AES-128, dynamisk kryptering – .NET
+      href: protect-with-aes128.md
+    - name: DRM, dynamisk kryptering – .NET
+      href: protect-with-drm.md
+    - name: Hämta princip för innehållsnyckel – .NET
+      href: get-content-key-policy-dotnet-howto.md
+    - name: Offline FairPlay för iOS
+      href: offline-fairplay-for-ios.md
+    - name: Offline Widevine för Android
+      href: offline-widevine-for-android.md
+    - name: Offline PlayReady för Windows 10
+      href: offline-plaready-streaming-for-windows-10.md
+  - name: Skapa filter
+    items:
+    - name: Med .NET
+      href: filters-dynamic-manifest-dotnet-howto.md
+    - name: Med REST
+      href: filters-dynamic-manifest-rest-howto.md
+    - name: Med CLI
+      href: filters-dynamic-manifest-cli-howto.md
 - name: Referens
   items:
-    - name: OpenAPI-specifikation (Swagger)
-      href: 'https://aka.ms/ams-v3-rest-sdk'
-    - name: REST
-      href: 'https://aka.ms/ams-v3-rest-ref'
-    - name: Azure CLI
-      href: 'https://aka.ms/ams-v3-cli-ref'
-    - name: 'SDK:er'
-      items:
-        - name: .NET
-          href: 'https://aka.ms/ams-v3-dotnet-ref'
-        - name: Java
-          href: 'https://aka.ms/ams-v3-java-ref'
-        - name: Python
-          href: 'https://aka.ms/ams-v3-python-ref'
-        - name: Node.js
-          href: 'https://aka.ms/ams-v3-nodejs-ref'
-        - name: Go
-          href: 'https://aka.ms/ams-v3-go-ref'
-    - name: Resource Manager-mall
-      href: /azure/templates/microsoft.media/allversions
-    - name: Event Grid-scheman
-      href: media-services-event-schemas.md
-    - name: DRM-licenser
-      items:
-        - name: PlayReady-licensmall
-          href: playready-license-template-overview.md
-        - name: Widevine-licensmall
-          href: widevine-license-template-overview.md
-        - name: Licenskrav för FairPlay
-          href: fairplay-license-overview.md
+  - name: OpenAPI-specifikation (Swagger)
+    href: https://aka.ms/ams-v3-rest-sdk
+  - name: REST
+    href: https://aka.ms/ams-v3-rest-ref
+  - name: Azure CLI
+    href: https://aka.ms/ams-v3-cli-ref
+  - name: SDK:er
+    items:
+    - name: .NET
+      href: https://aka.ms/ams-v3-dotnet-ref
+    - name: Java
+      href: https://aka.ms/ams-v3-java-ref
+    - name: Python
+      href: https://aka.ms/ams-v3-python-ref
+    - name: Node.js
+      href: https://aka.ms/ams-v3-nodejs-ref
+    - name: Go
+      href: https://aka.ms/ams-v3-go-ref
+  - name: Resource Manager-mall
+    href: /azure/templates/microsoft.media/allversions
+  - name: Event Grid-scheman
+    href: media-services-event-schemas.md
+  - name: DRM-licenser
+    items:
+    - name: PlayReady-licensmall
+      href: playready-license-template-overview.md
+    - name: Widevine-licensmall
+      href: widevine-license-template-overview.md
+    - name: Licenskrav för FairPlay
+      href: fairplay-license-overview.md
 - name: Resurser
   items:
-    - name: Azure-översikt
-      href: 'https://azure.microsoft.com/roadmap/?category=web-mobile'
-    - name: Prissättning
-      href: 'https://azure.microsoft.com/pricing/details/media-services/'
-    - name: Regional tillgänglighet
-      href: 'https://azure.microsoft.com/regions/services/'
-    - name: Videoklipp
-      href: 'https://azure.microsoft.com/resources/videos/index/?services=media-services'
-    - name: OpenAPI-specifikation (Swagger)
-      href: 'https://aka.ms/ams-v3-rest-sdk'
-    - name: 'SDK:er/verktyg'
-      items:
-        - name: Azure CLI
-          href: 'https://aka.ms/ams-v3-cli'
-        - name: .NET
-          href: 'https://aka.ms/ams-v3-dotnet-sdk'
-        - name: Java
-          href: 'https://aka.ms/ams-v3-java-sdk'
-        - name: Python
-          href: 'https://aka.ms/ams-v3-python-sdk'
-        - name: Node.js
-          href: 'https://aka.ms/ams-v3-nodejs-sdk'
-        - name: Ruby
-          href: 'https://aka.ms/ams-v3-ruby-sdk'
-    - name: Viktig information
-      href: release-notes.md
-    - name: VANLIGA FRÅGOR OCH SVAR
-      href: frequently-asked-questions.md
-    - name: Azure-moln och -regioner
-      href: azure-clouds-regions.md
+  - name: Azure-översikt
+    href: https://azure.microsoft.com/roadmap/?category=web-mobile
+  - name: Prissättning
+    href: https://azure.microsoft.com/pricing/details/media-services/
+  - name: Regional tillgänglighet
+    href: https://azure.microsoft.com/regions/services/
+  - name: Videoklipp
+    href: https://azure.microsoft.com/resources/videos/index/?services=media-services
+  - name: OpenAPI-specifikation (Swagger)
+    href: https://aka.ms/ams-v3-rest-sdk
+  - name: SDK:er/verktyg
+    items:
+    - name: Azure CLI
+      href: https://aka.ms/ams-v3-cli
+    - name: .NET
+      href: https://aka.ms/ams-v3-dotnet-sdk
+    - name: Java
+      href: https://aka.ms/ams-v3-java-sdk
+    - name: Python
+      href: https://aka.ms/ams-v3-python-sdk
+    - name: Node.js
+      href: https://aka.ms/ams-v3-nodejs-sdk
+    - name: Ruby
+      href: https://aka.ms/ams-v3-ruby-sdk
+  - name: Viktig information
+    href: release-notes.md
+  - name: VANLIGA FRÅGOR OCH SVAR
+    href: frequently-asked-questions.md
+  - name: Azure-moln och -regioner
+    href: azure-clouds-regions.md
+ms.openlocfilehash: ca6afadf1141e60d4436178ef45fccfdc48f97a5
+ms.sourcegitcommit: ba9f95cf821c5af8e24425fd8ce6985b998c2982
+ms.translationtype: HT
+ms.contentlocale: sv-SE
+ms.lasthandoff: 01/17/2019
+ms.locfileid: "54382105"
