commit translated contents

--- a/articles/hdinsight/hadoop/TOC.yml
+++ b/articles/hdinsight/hadoop/TOC.yml
@@ -36,8 +36,8 @@ items:
   - name: Tillgänglighet och tillförlitlighet
     href: ../hdinsight-high-availability-linux.md
     maintainContext: true
-  - name: Jämför lagringsalternativ
-    href: ../hdinsight-hadoop-compare-storage-options.md
+  - name: Data Lake Storage Gen2
+    href: ../hdinsight-hadoop-data-lake-storage-gen2.md
     maintainContext: true
 - name: Gör så här för att
   items:
@@ -50,9 +50,6 @@ items:
       maintainContext: true
     - name: Använda Azure Data Lake Storage
       href: ../hdinsight-hadoop-use-data-lake-store.md
-      maintainContext: true
-    - name: Använda Azure Data Lake Store Gen2
-      href: ../hdinsight-hadoop-use-data-lake-storage-gen2.md
       maintainContext: true
   - name: Använda Apache Hadoop för batchfrågor
     items:
@@ -325,8 +322,6 @@ items:
         href: ../hdinsight-hadoop-manage-ambari-rest-api.md
         maintainContext: true
       maintainContext: true
-    - name: Autoskala HDInsight-kluster
-      href: ../hdinsight-autoscale-clusters.md
     - name: Skala ett HDInsight-kluster
       href: ../hdinsight-scaling-best-practices.md
       maintainContext: true
@@ -566,9 +561,9 @@ items:
   - name: Windows-verktyg för HDInsight
     href: ../hdinsight-hadoop-windows-tools.md
     maintainContext: true
-ms.openlocfilehash: 3bdc132e4b9b7f47fb1d65f540baa744f5afc5a8
-ms.sourcegitcommit: cf88cf2cbe94293b0542714a98833be001471c08
+ms.openlocfilehash: 45797e5440f0d01ec3049fff2ff5f7fdf5858d5b
+ms.sourcegitcommit: 3ba9bb78e35c3c3c3c8991b64282f5001fd0a67b
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 01/23/2019
-ms.locfileid: "54472797"
+ms.lasthandoff: 01/15/2019
+ms.locfileid: "54321712"
