--- a/articles/azure-portal/TOC.yml
+++ b/articles/azure-portal/TOC.yml
@@ -5,6 +5,8 @@ items:
   items:
   - name: Skapa och dela Azure-instrumentpaneler
     href: azure-portal-dashboards.md
+  - name: Använda en anpassad Markdown-panel
+    href: azure-portal-markdown-tile.md
   - name: Dela instrumentpaneler med rollbaserad åtkomstkontroll
     href: azure-portal-dashboard-share-access.md
   - name: Azure-instrumentpanelernas struktur
@@ -36,9 +38,9 @@ items:
     href: https://stackoverflow.com/questions/tagged/azure-management-portal
   - name: Videoklipp
     href: https://azure.microsoft.com/documentation/videos/index/?services=azure-portal&sort=newest
-ms.openlocfilehash: 3ce637e9d2eba4bd166bb971cacef46b266d4332
-ms.sourcegitcommit: 30d23a9d270e10bb87b6bfc13e789b9de300dc6b
+ms.openlocfilehash: 7fee5a433470309384931e6ea43817288aecf7a8
+ms.sourcegitcommit: 644de9305293600faf9c7dad951bfeee334f0ba3
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 01/08/2019
-ms.locfileid: "54104183"
+ms.lasthandoff: 01/25/2019
+ms.locfileid: "54902779"
