--- a/articles/virtual-machine-scale-sets/TOC.yml
+++ b/articles/virtual-machine-scale-sets/TOC.yml
@@ -181,6 +181,14 @@ items:
       href: virtual-machine-scale-sets-mvss-guest-based-autoscale-linux.md
   - name: Distribuera
     items:
+    - name: Ansible
+      items:
+      - name: Skapa och hantera skalningsuppsättningar
+        href: /azure/ansible/ansible-create-configure-vmss
+        maintainContext: true
+      - name: Distribuera appar till skalningsuppsättningar
+        href: /azure/ansible/ansible-deploy-app-vmss
+        maintainContext: true
     - name: Skapa med Visual Studio
       href: virtual-machine-scale-sets-vs-create.md
     - name: Använda tillgänglighetszoner
@@ -243,17 +251,6 @@ items:
       href: virtual-machine-scale-sets-convert-template-to-md.md
     - name: Planerat underhåll
       href: virtual-machine-scale-sets-maintenance-notifications.md
-  - name: Använda Ansible
-    items:
-    - name: Skapa och hantera skalningsuppsättningar
-      href: /azure/ansible/ansible-create-configure-vmss
-      maintainContext: true
-    - name: Distribuera appar till skalningsuppsättningar
-      href: /azure/ansible/ansible-deploy-app-vmss
-      maintainContext: true
-    - name: Autoskala en skalningsuppsättning
-      href: /azure/ansible/ansible-auto-scale-vmss
-      maintainContext: true
   - name: Felsöka
     items:
     - name: Automatisk skalning
@@ -286,9 +283,9 @@ items:
     href: https://azure.microsoft.com/pricing/calculator/
   - name: Stack Overflow
     href: http://stackoverflow.com/questions/tagged/azure-vm-scale-set
-ms.openlocfilehash: e8239a2b9f4717e2483af2084b1ba07368361e88
-ms.sourcegitcommit: b4755b3262c5b7d546e598c0a034a7c0d1e261ec
+ms.openlocfilehash: de2352105b178a91e47934db5b2c2d6b82a12b94
+ms.sourcegitcommit: a512360b601ce3d6f0e842a146d37890381893fc
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 01/24/2019
-ms.locfileid: "54883338"
+ms.lasthandoff: 01/11/2019
+ms.locfileid: "54231588"
