--- a/articles/active-directory/identity-protection/TOC.yml
+++ b/articles/active-directory/identity-protection/TOC.yml
@@ -20,27 +20,45 @@ items:
   expanded: false
 - name: Instruktionsguider
   items:
-  - name: Aktivera Azure AD Identity Protection
-    href: enable.md
-  - name: Konfigurera MFA-registreringsprincipen
-    href: howto-mfa-policy.md
-  - name: Konfigurera riskprincipen för inloggning
-    href: howto-sign-in-risk-policy.md
-  - name: Konfigurera riskprincipen för användare
-    href: howto-user-risk-policy.md
-  - name: Stäng aktiva riskhändelser
-    href: howto-close-active-risk-events.md
-  - name: Avblockera användare
-    href: howto-unblock-user.md
-  - name: Simulera riskhändelser
-    href: playbook.md
-  - name: Använda Microsoft Graph API
-    href: graph-get-started.md
-  - name: Vanliga frågor och svar
-    href: faqs.md
+  - name: Identity Protection
+    items:
+    - name: Aktivera Azure AD Identity Protection
+      href: enable.md
+    - name: Konfigurera MFA-registreringsprincipen
+      href: howto-mfa-policy.md
+    - name: Konfigurera riskprincipen för inloggning
+      href: howto-sign-in-risk-policy.md
+    - name: Konfigurera riskprincipen för användare
+      href: howto-user-risk-policy.md
+    - name: Stäng aktiva riskhändelser
+      href: howto-close-active-risk-events.md
+    - name: Avblockera användare
+      href: howto-unblock-user.md
+    - name: Simulera riskhändelser
+      href: playbook.md
+    - name: Vanliga frågor och svar
+      href: faqs.md
+  - name: Identitetsskydd (Uppdaterad)
+    items:
+    - name: Översikt
+      href: overview-v2.md
+    - name: Säkerhetsöversikt
+      href: security-overview.md
+    - name: Undersöka riskfyllda användare och inloggningar
+      href: howto-investigate-risky-users-signins.md
+    - name: Konfigurera riskprinciper
+      href: howto-configure-risk-policies.md
+    - name: Förbättra noggrannheten för identifiering
+      href: howto-improve-detection-accuracy.md
+    - name: Vanliga frågor och kända problem
+      href: known-issues.md
   expanded: true
 - name: Referens
   items:
+  - name: Använda Microsoft Graph API
+    href: graph-get-started.md
+  - name: Riskhändelser
+    href: risk-events-reference.md
   - name: Ordlista
     href: glossary.md
 - name: Resurser
@@ -57,9 +75,9 @@ items:
     href: https://stackoverflow.com/questions/tagged/azure-active-directory
   - name: Videoklipp
     href: https://azure.microsoft.com/documentation/videos/index/?services=active-directory
-ms.openlocfilehash: 8e684f77d25e4ee685b715e8394faf00e3998be9
-ms.sourcegitcommit: c61c98a7a79d7bb9d301c654d0f01ac6f9bb9ce5
+ms.openlocfilehash: 8c48b383ccd2ac30dc9598cd2da0f043afae43dc
+ms.sourcegitcommit: 97d0dfb25ac23d07179b804719a454f25d1f0d46
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 11/27/2018
-ms.locfileid: "52423304"
+ms.lasthandoff: 01/25/2019
+ms.locfileid: "54910954"
