--- a/articles/cognitive-services/Bing-Web-Search/index.yml
+++ b/articles/cognitive-services/Bing-Web-Search/index.yml
@@ -1,16 +1,16 @@
 ### YamlMime:YamlDocument
-ms.openlocfilehash: 69fa31efe9044ca6dbbc2c6229fdaa328437a046
-ms.sourcegitcommit: 295babdcfe86b7a3074fd5b65350c8c11a49f2f1
+ms.openlocfilehash: 0dbbf1e5b3f80f1dce188e38f3e0ff2d12cce07b
+ms.sourcegitcommit: 97d0dfb25ac23d07179b804719a454f25d1f0d46
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 12/27/2018
-ms.locfileid: "53792124"
+ms.lasthandoff: 01/25/2019
+ms.locfileid: "54912262"
 documentType: LandingData
 title: Dokumentation om API för Bing-webbsökning
 metadata:
   document_id: 6111ada8-aec2-11e7-abc4-cec278b6b50a
   title: Dokumentation om API för Bing-webbsökning – Självstudier, snabbstarter, API-referenser | Microsoft Docs
-  description: Lär dig att använda API för webbsökning i Bing för att hämta resultat från webben som är relevanta för användarfrågor. Självstudier visar hur du skapar appar som använder tjänsten.
+  description: Lär dig hur du använder API:et för webbsökning i Bing för att söka efter webbsidor, bilder, videor, nyheter med mera på webben.
   services: cognitive-services
   author: nitinme
   manager: cgronlun
@@ -22,7 +22,7 @@ metadata:
   ms.date: 9/24/2018
   ms.author: nitinme
 abstract:
-  description: API för webbsökning i Bing ger funktioner som liknar Bing genom att returnera sökresultat som Bing avgjort är relevanta för användarens fråga. Resultaten omfattar webbsidor och kan även omfatta bilder, videor med mera.
+  description: 'Med API:et för webbsökning i Bing kan du integrera Bings sökningsfunktioner i dina program. Du kan söka efter relevanta webbsidor, bilder, videor, nyheter med mera genom att skicka sökfrågor med API: et.'
 sections:
 - items:
   - type: list
@@ -48,13 +48,13 @@ sections:
 - title: Snabbstarter på 5 minuter
   items:
   - type: paragraph
-    text: 'Kom igång med API för webbsökning i Bing genom att skapa en fråga och visa JSON-svaret:'
+    text: 'Sök på Internet med hjälp av:'
   - type: list
     style: icon48
     items:
     - image:
         src: media/index/logo_csharp.svg
-      href: quickstarts/csharp
+      href: web-search-sdk-quickstart
       text: C&#35;
     - image:
         src: https://docs.microsoft.com/media/logos/logo_gopher.svg
@@ -62,11 +62,11 @@ sections:
       text: Go
     - image:
         src: media/index/logo_java.svg
-      href: quickstarts/java
+      href: web-sdk-java-quickstart
       text: Java
     - image:
         src: media/index/logo_nodejs.svg
-      href: quickstarts/nodejs
+      href: web-search-sdk-node-quickstart
       text: Node.js
     - image:
         src: media/index/logo_php.svg
@@ -74,7 +74,7 @@ sections:
       text: PHP
     - image:
         src: media/index/logo_python.svg
-      href: quickstarts/python
+      href: web-sdk-python-quickstart
       text: Python
     - image:
         src: media/index/logo_ruby.svg
