--- a/articles/service-fabric/toc.yml
+++ b/articles/service-fabric/toc.yml
@@ -86,6 +86,22 @@ items:
       href: service-fabric-tutorial-standalone-install-an-application.md
     - name: 4 -– Rensa klustret och ta bort infrastrukturen
       href: service-fabric-tutorial-standalone-clean-up.md
+- name: Bästa praxis
+  items:
+  - name: Översikt över metodtips för Service Fabric
+    href: service-fabric-best-practices-overview.md
+  - name: Säkerhet
+    href: service-fabric-best-practices-security.md
+  - name: Nätverk
+    href: service-fabric-best-practices-networking.md
+  - name: Beräkningsplanering och skalning
+    href: service-fabric-best-practices-capacity-scaling.md
+  - name: Infrastruktur som kod
+    href: service-fabric-best-practices-infrastructure-as-code.md
+  - name: Övervakning och diagnostik
+    href: service-fabric-best-practices-monitoring.md
+  - name: Checklista för produktionsberedskap
+    href: service-fabric-production-readiness-checklist.md
 - name: Exempel
   items:
   - name: Kodexempel
@@ -702,10 +718,6 @@ items:
       href: service-fabric-reverse-proxy-diagnostics.md
     - name: Felsök ditt lokala kluster
       href: service-fabric-troubleshoot-local-cluster-setup.md
-  - name: Bästa praxis
-    items:
-    - name: Checklista för produktionsberedskap
-      href: service-fabric-production-readiness-checklist.md
 - name: Referens
   items:
   - name: Azure PowerShell
@@ -827,9 +839,9 @@ items:
     href: https://azure.microsoft.com/updates/?product=service-fabric
   - name: Videoklipp
     href: https://azure.microsoft.com/documentation/videos/index/?services=service-fabric
-ms.openlocfilehash: abf77c080d6093e9028f82ccac7b20d24389bdbb
-ms.sourcegitcommit: a1cf88246e230c1888b197fdb4514aec6f1a8de2
+ms.openlocfilehash: 5b487a8212cabb6809a9152e10dde7a1c9c7158f
+ms.sourcegitcommit: 97d0dfb25ac23d07179b804719a454f25d1f0d46
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 01/16/2019
-ms.locfileid: "54352486"
+ms.lasthandoff: 01/25/2019
+ms.locfileid: "54913537"
